kubernetes/tautulli/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tautulli
  namespace: tautulli
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`tautulli.tehmatt.com`)
    kind: Rule
    services:
    - name: tautulli
      port: 8181
    middlewares:
    - name: default-headers
  tls: {}
